force-app/main/default/objects/vlocity_ins__ProductRequirement__c/fields/vlocity_ins__ApplicableObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ApplicableObject__c</fullName>
    <label>Applicable Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>InsuranceClaim__c</fullName>
            </value>
            <value>
                <fullName>ClaimCoverage__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>