force-app/main/default/objects/vlocity_ins__ProductRequirement__c/fields/vlocity_ins__FalseActionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FalseActionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Vlocity Action associated with the Product Requirement. This action executes when the underwriting rule is false.</description>
    <label>False Action</label>
    <referenceTo>vlocity_ins__VlocityAction__c</referenceTo>
    <relationshipLabel>Product Requirements with false action</relationshipLabel>
    <relationshipName>ProductRequirementsWithFalseAction</relationshipName>
    <type>Lookup</type>
</CustomField>