force-app/main/default/objects/vlocity_ins__ProductRequirement__c/fields/vlocity_ins__FalseMessage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FalseMessage__c</fullName>
    <description>The message presented when the underwriting rule is false.</description>
    <label>False Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>