force-app/main/default/objects/vlocity_ins__ProductRequirement__c/fields/vlocity_ins__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>