force-app/main/default/objects/vlocity_ins__ProductRequirement__c/fields/vlocity_ins__RuleScope__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RuleScope__c</fullName>
    <description>The insured item types on which the rule executes.</description>
    <label>Rule Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>