force-app/main/default/objects/vlocity_ins__ProductRequirement__c/fields/vlocity_ins__StateModelVersionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StateModelVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vlocity State Model Version</label>
    <referenceTo>vlocity_ins__VlocityStateModelVersion__c</referenceTo>
    <relationshipLabel>Product Requirements</relationshipLabel>
    <relationshipName>ProductRequirements</relationshipName>
    <type>Lookup</type>
</CustomField>