force-app/main/default/objects/vlocity_ins__ProductRequirement__c/fields/vlocity_ins__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call-Out</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>